tests/fixtures/invalid/bytes_div_none.py
# Cannot divide Bytes and None
x: float = b"hello" / None
